fix wrap words in the hints

--- a/components/UI/ISTCategoryHints/categoryHints.module.scss
+++ b/components/UI/ISTCategoryHints/categoryHints.module.scss
@@ -9,7 +9,6 @@
     display: flex;
     flex-wrap: nowrap;
     margin-bottom: 15px;
-    width: 100%;
 
     > .result_title_name {
       min-width: 150px;
@@ -24,11 +23,12 @@
       @include font-size(1.125rem);
       line-height: 21px;
       color: $pure_white;
-
     }
+
     > .possible_results {
       display: flex;
       flex-direction: column;
+      width: 60%;
 
       > .result {
         font-weight: 400;
@@ -36,18 +36,17 @@
         line-height: 21px;
         color: $pure_white;
         margin-bottom: 15px;
-
+        word-wrap: break-word;
+        width: 100%;
         cursor: pointer;
       }
     }
   }
 }
 
-
 @media screen and (max-width: 526px) {
   .result_container {
     flex-direction: column;
-    
   }
   .result_title_name {
     margin: 10px auto !important;
